# Telemetry_Dashboard

./: .gitignore  CMakeLists.txt  README.md  backend.py  client.cpp  client.py  depr_client.cpp  sensors  sensors.cpp  server.cpp  telem.sql  telemetry.proto  telemetry_pb2.py  utils.h
data/: dump.rdb  metrics.sql  telem.sql
frontend/telemetry_dashboard/: package-lock.json  package.json
frontend/telemetry_dashboard/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/telemetry_dashboard/src/components/: StreamButton.tsx  StreamConnection.ts  ToggleButton.tsx
frontend/telemetry_dashboard/src/store/: store.ts  toggleSlice.ts
logs/: p_output.prof
telemetry/: CMakeLists.txt  backend.py  client.py  server.cpp
telemetry/proto/: telemetry.proto  telemetry_pb2_grpc.py
user_metrics/: keyboardData.py  mediaData.py  metrics.py  metrics_client.py  metrics_server.py  mouseData.py  utils.py
user_metrics/proto/: metrics.proto  metrics_pb2.py  metrics_pb2_grpc.py
